# AAI

./: .gitignore  .nbignore  .nojekyll  AGENTS.md  README.md  index.html  justfile  makefile  philosophy.md  pyproject.toml  search.json  skills-lock.json
.github/workflows/: release-pdfs.yml
C3_ML_project/: amazon_rating_colab (2).ipynb
W1/: Python_Reference.html  index.html
W1/exercises/: python_complete_quiz.html
W1/lessons/: 01_bootcamp_intro.html  02_terminal.html  03_vs_code.html  04_source_control.html
W2/: DS_Reference.html  index.html  quantiles.html  web_scraping.html
W2/Project/: presentation.html
W3/: index.html  m6_index.html  model_analysis_subplots.html
W3/Project/: ML_Problem_Framing.html  Project.html  datasets.html
W4/: TODO.html  index.html  never_expose_api_keys.html  notes-case-studies.html
W4/M1/: 00_intro.html  00_intro_1.html  00_intro_2.html  01_agents.html  01_models.html  (+41 more)
W5/: challenges.html  index.html
W6/: 01_agentic_engineering.html  index.html
content/: .gitignore  _quarto.yml  custom.scss  index.qmd
datasets/: README.md  datasets.qmd
docs/: ai_policy.md  proof-of-work.md  the_art_of_reading_docs.md
draw/: ci.ipynb  figure_bar_hist_kde.ipynb  figure_dispersion.ipynb  figure_iq.ipynb  figure_iqr.ipynb  figure_variation.ipynb
examples/: lecture_1_slides.typ  lecture_2_slides.typ
prompts/: terminal_lessons.md
scripts/: download_courses.py  draw_figures.ipynb  qmd_to_typ.py
student/: README.md  chap01.ipynb  chap02.ipynb  chap03.ipynb  chap04.ipynb  chap05.ipynb
template/: custom-outline.typ  theme.typ
(+730 files in other folders)
