[project]
name = "public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arabic-reshaper>=3.0.1",
    "folium>=0.20.0",
    "ipywidgets>=8.1.8",
    "pandas>=3.0.3",
    "pandera[pandas]>=0.31.1",
    "python-bidi>=0.6.10",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "nbclient>=0.10.4",
    "nbformat>=5.10.4",
]
